# ebook-wgpu-terrains

./: Cargo.toml  README.md
examples/ch01/: shader_unlit.wgsl  terrain_animation.rs  terrain_cpu.rs  terrain_water_level.rs  test.rs
examples/ch02/: shader_unlit_instance.wgsl  terrain_chunk.rs  terrain_instance.rs  terrain_multiple_chunks.rs
examples/ch03/: indices_comp.wgsl  minecraft_comp.wgsl  minecraft_gpu.rs  shader_minecraft.wgsl  terrain_comp.wgsl  terrain_gpu.rs
src/: lib.rs  terrain_data.rs
